Fix GPRInfo inconsistency in unlinked DFG bringup https://bugs.webkit.org/show_bug.cgi?id=239573

Reviewed by NOBODY (OOPS!).

Previously, we forgot changing GPRInfo::toIndex of x64 so that we got assertion in ScratchRegisterAllocator.
This patch fixes it and test this consistency in testmasm.
It allows unlinked DFG style register usage in x64, so we reenabled it again. We also change GPRInfo functions to constexpr.

* Source/JavaScriptCore/assembler/testmasm.cpp:
(JSC::testGPRInfoConsistency):
* Source/JavaScriptCore/dfg/DFGPlan.cpp:
(JSC::DFG::Plan::compileInThreadImpl):
* Source/JavaScriptCore/jit/GPRInfo.h:
(JSC::GPRInfo::toRegister):
(JSC::GPRInfo::toArgumentRegister):
(JSC::GPRInfo::toIndex):